crates/plotnik-tests/tests/04-emit/bytecode/nodes/wildcard_parent_nested_impossible.txt
Q = (array
  (_
    (program) @p
  ) @node
)
------------------ DIAGNOSTICS -------------------
error: no node the grammar builds takes these children
 --> query.ptk:2:4
  |
2 |   (_
  |    ^
  |
help: `(_)` matches any named node, but no named node kind admits this combination of children in this order
